Fix footer align

--- a/hito1.css
+++ b/hito1.css
@@ -13612,7 +13612,7 @@ div#notebook {
 
 /* justify */
 p {
-  text-align: justify;
+  text-align: justify !important;
   text-justify: inter-word !important;
 }
 
